--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,10 @@ dependencies {
     implementation "androidx.fragment:fragment-ktx:1.3.0"
 
 
+    def dagger_version = "2.25.4"
+    implementation "com.google.dagger:dagger:$dagger_version"
+    kapt "com.google.dagger:dagger-compiler:$dagger_version"
+
     // material dialogs
     def matieral_dialogs_version = "3.1.0"
     implementation "com.afollestad.material-dialogs:core:$matieral_dialogs_version"
